--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
         <p class="fade-in-up delay-1">Save spare change, earn safe yield — powered by Stellar</p>
       </header>
 
+      <nav class="bottom-nav">
+        <button onclick="showDashboard()">🏠</button>
+        <button onclick="showPay()">💳</button>
+        <button onclick="showVault()">🏦</button>
+        <button onclick="showYield()">📈</button>
+      </nav>
+
       <main id="app"></main>
     </div>
 
